// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Projektmanagement_DesktopApp.DataSource;

#nullable disable

namespace Projektmanagement_DesktopApp.Migrations
{
    [DbContext(typeof(DataSourceContext))]
    partial class DataSourceContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "10.0.2");

            modelBuilder.Entity("Projektmanagement_DesktopApp.DataClass.Project", b =>
                {
                    b.Property<int>("id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<DateTime>("createDate")
                        .HasColumnType("TEXT");

                    b.Property<bool>("isActive")
                        .HasColumnType("INTEGER");

                    b.HasKey("id");

                    b.ToTable("Projects");
                });

            modelBuilder.Entity("Projektmanagement_DesktopApp.DataClass.Ressource", b =>
                {
                    b.Property<int>("id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("count")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("createDate")
                        .HasColumnType("TEXT");

                    b.Property<bool>("isActive")
                        .HasColumnType("INTEGER");

                    b.Property<string>("name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<int>("projectUid")
                        .HasColumnType("INTEGER");

                    b.HasKey("id");

                    b.ToTable("Ressources");
                });

            modelBuilder.Entity("Projektmanagement_DesktopApp.DataClass.Task", b =>
                {
                    b.Property<int>("id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("createDate")
                        .HasColumnType("TEXT");

                    b.Property<int>("duration")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("endDate")
                        .HasColumnType("TEXT");

                    b.Property<bool>("isActive")
                        .HasColumnType("INTEGER");

                    b.Property<int>("projectUid")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("startDate")
                        .HasColumnType("TEXT");

                    b.Property<int>("workerUid")
                        .HasColumnType("INTEGER");

                    b.HasKey("id");

                    b.ToTable("Task");
                });

            modelBuilder.Entity("Projektmanagement_DesktopApp.DataClass.TaskRevision", b =>
                {
                    b.Property<int>("id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("createDate")
                        .HasColumnType("TEXT");

                    b.Property<bool>("isActive")
                        .HasColumnType("INTEGER");

                    b.Property<int>("originalUid")
                        .HasColumnType("INTEGER");

                    b.Property<int>("previousTaskUid")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("revisionDate")
                        .HasColumnType("TEXT");

                    b.Property<int>("revisionNumber")
                        .HasColumnType("INTEGER");

                    b.Property<int>("taskUid")
                        .HasColumnType("INTEGER");

                    b.HasKey("id");

                    b.ToTable("TaskRevisions");
                });

            modelBuilder.Entity("Projektmanagement_DesktopApp.DataClass.Worker", b =>
                {
                    b.Property<int>("id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("createDate")
                        .HasColumnType("TEXT");

                    b.Property<bool>("isActive")
                        .HasColumnType("INTEGER");

                    b.Property<string>("name")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("id");

                    b.ToTable("Workers");
                });
#pragma warning restore 612, 618
        }
    }
}
